# Generative_AI

./: RAG.drawio
RAG/: RAG.drawio  RAG.py  README.md  main.py  pyproject.toml  test.txt  typesense_db.py
RAG with MongoDB/: README.md  architecture.drawio  main.py  pyproject.toml  rag_mongo.py  requirements.txt  test.py
RAG/agentic_rag/: agentic.py
RAG/data/text_files/: machine_learning.txt  python_intro.txt
RAG/notebook/: document.py
