[project]
name = "rag"
version = "0.1.0"
description = "My First RAG project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.0",
    "sentence-transformers>=5.4.1",
]
